[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-dotenv"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "The AI-safe, drop-in replacement for Python .env files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "watchdog>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.1.0"
]

[project.scripts]
secure-dotenv = "secure_dotenv.cli:cli"