[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-dotenv"
version = "0.1.0"
authors = [{name = "Nishanth K R", email = "itsmenishanthkr@gmail.com"}]
description = "The AI-safe, replacement for Python .env files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license="MIT"
license-files = ["LICENSE"]
dependencies = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "watchdog>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.1.0"
]

[project.scripts]
secure-dotenv = "secure_dotenv.cli:cli"

[tool.setuptools.packages.find]
include = ["secure_dotenv*"]  # Only include your code
exclude = ["assets*", "tests*"] # Explicitly ignore the assets folder